# blink.nvim

./: .envrc  .gitignore  Cargo.toml  Makefile  README.md  flake.nix
lua/blink/: config.lua  init.lua
lua/blink/chartoggle/: config.lua  init.lua
lua/blink/clue/: init.lua
lua/blink/dashboard/: init.lua
lua/blink/delimiters/: config.lua  init.lua  parser.lua  rust.lua  types.lua  utils.lua  watcher.lua
lua/blink/delimiters/langs/: c.lua  cpp.lua  css.lua  json.lua  lua.lua  rust.lua  sql.lua  typescriptreact.lua  yaml.lua
lua/blink/fuzzy/: Cargo.toml  build-lua.sh  init.lua
lua/blink/fuzzy/src/: lib.rs
lua/blink/indent/: config.lua  init.lua  scope.lua  static.lua  utils.lua
lua/blink/render/: types.lua
lua/blink/select/: config.lua  init.lua  renderer.lua  types.lua  window.lua
lua/blink/select/providers/: buffers.lua  code-actions.lua  diagnostics.lua  recent-searches.lua  smart-open.lua  symbols.lua  yank-history.lua
lua/blink/tree/: config.lua  filesystem.lua  init.lua  popup.lua  renderer.lua  tree.lua  window.lua
lua/blink/tree/binds/: activate.lua  basic.lua  expand.lua  init.lua  move.lua
lua/indent/: init.lua  static.lua
readmes/delimiters/: README.md
readmes/indent/: README.md
scripts/: dual_log.sh  dual_push.sh  dual_sync.sh
scripts/cmp/: build-ffi-bindings.sh
src/: lib.rs
src/delimiters/: mod.rs  parser.rs
src/delimiters/languages/: c.rs  cpp.rs  csharp.rs  go.rs  java.rs  javascript.rs  lua.rs  mod.rs  php.rs  python.rs  ruby.rs  rust.rs  swift.rs  typescript.rs
src/job/: default.rs  mod.rs  options.rs  pty.rs
(+10 files in other folders)
